send_message event works receiving msg and emitting another event to the browser

--- a/tester.html
+++ b/tester.html
@@ -37,7 +37,7 @@
         }
       });
 
-      socket.on('send_message', function(msg) {
+      socket.on('broadcast_message', function(msg) {
         var item = document.createElement('li');
         item.textContent = msg;
         messages.appendChild(item);
